# nb-streamgage

./: .gitignore  Jupyter Notebooks Ex. 1 - Creating an environment.ipynb  Jupyter Notebooks Ex. 1 - Getting Started.ipynb  Jupyter-Notebooks-01--Getting-Started.ipynb  README.md  Stream Gage Ex. 1 - Reading and Plotting Data.ipynb  Stream Gage Ex. 1 - Reading and plotting.ipynb  Stream Gage Ex. 2 - Temperature Seasonality.ipynb  Stream Gage Ex. 3 - Examine Air Temperature and Turbidity.ipynb  Stream Gage Ex. 4 - Access NWIS with dataretrieval.ipynb  Stream Gage Ex. 6 - Baseflow Separation.ipynb  Stream Gage Ex. 7 - Baseflow Separation Part 2.ipynb  Streamgage-01--Access-NWIS-with-dataretrieval.ipynb  Streamgage-02--Reading-and-Plotting-Data.ipynb  Streamgage-03--Water-Temperature-Seasonality.ipynb  Streamgage-05--Turbidity.ipynb  Streamgage-06--Baseflow-Separation-Part-1.ipynb  Streamgage-07--Baseflow-Separation-Part-2.ipynb  Weather-01--Access-NOAA-Climate-Data-Online.ipynb  Weather-01--Air-Temperature.ipynb  Weather-02--Air-Temperature.ipynb  nb-streamgage.sublime-workspace  pyproject.toml  requirements.txt
cli/: map_sites.py  plot_cdf.py  plot_timeline.py
data/: lang_01576516_daily_loads.csv  lang_01576516_daily_loads.parquet  lang_01576516_daily_temp.csv  lang_01576516_daily_temp.parquet  lang_01576516_instantaneous_loads.parquet  lang_01576516_instantaneous_turbidity.parquet  lang_015765185_daily_loads.csv  lang_015765185_daily_loads.parquet  lang_015765185_daily_temp.csv  lang_015765185_daily_temp.parquet  lang_015765185_instantaneous_loads.parquet  (+14 more)
(+4 files in other folders)
